# llm-grounding-deficit

./: README.md  pyproject.toml
dashboard/: app.py
data/: arbitrary_facts_v1.jsonl
experiments/: run_eval.py
grounding_deficit/: models.py  report.py
grounding_deficit/data/: facts_dataset.py
grounding_deficit/deltas/: delta_c.py  delta_e.py  delta_s.py
tests/: test_delta_s.py  test_facts_dataset.py  test_report.py
